# awesum

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  main.rs  msg_handler.rs  progress.rs
lib/: Cargo.toml
lib/src/: algorithm.rs  check.rs  create.rs  errors.rs  lib.rs  msg_handler.rs  parse.rs  progress.rs
lib/src/hashing/: blake2b.rs  blake2s.rs  crc32.rs  mod.rs
