[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
blake2b_simd = "1.0.2"
blake2s_simd = "1.0.2"
blake3 = { version = "=1.8.3", features = ["traits-preview"] }
crc32fast = "1.4.2"
digest = "0.10.7"
hex = "0.4.3"
md-5 = "0.10.6"
rayon.workspace = true
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum.workspace = true
thiserror = "2.0.9"

[lib]
path = "src/lib.rs"
